--- a/paparazzi-gradle-plugin/src/test/projects/multiplatform-plugin-with-android/build.gradle
+++ b/paparazzi-gradle-plugin/src/test/projects/multiplatform-plugin-with-android/build.gradle
@@ -6,6 +6,14 @@ plugins {
 
 kotlin {
   androidTarget()
+
+  sourceSets {
+    androidMain {
+      dependencies {
+        implementation 'androidx.appcompat:appcompat:1.7.0'
+      }
+    }
+  }
 }
 
 android {
